fixing image align

--- a/style.css
+++ b/style.css
@@ -97,32 +97,31 @@ html {
 
 .downloadResume {
   color: black;
-  margin-top: 2em;
+  margin-top: 4em;
   border: 1px solid black;
   border-radius: 30px;
   font-size: 20px;
   display: inline-block;
-  margin-left: 45%;
-  padding: 0.5em 2em;
+  margin-left: 46%;
+  padding: 0.5em 1.4em;
   cursor: pointer;
   text-decoration: none;
   margin-bottom: 10em;
 }
+
 .downloadResume:hover {
   background-color: gray;
   color: white;
   border: 1px solid transparent;
 }
 #recentWorkHeader {
-  /* margin-top: 2em; */
-  padding-top: 2.5em;
-  margin-top: 1em;
+  padding-top: 1em;
   margin-bottom: 3em;
   text-align: center;
-  font-size: 30px;
+  font-size: 3em;
   font-weight: bold;
-  background-color: red;
 }
+
 #secondPage {
   height: 85vh;
   margin-bottom: 2em;
@@ -130,18 +129,19 @@ html {
 
 .skills {
   text-align: center;
+  /* margin-right: 4em; */
   margin-bottom: 2em;
   padding-top: 3em;
   color: black;
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .imageDiv {
   display: grid;
-  grid-template-columns: 25% 25% 25%;
-  gap: 3em;
-  margin-left: 22%;
-  margin-right: 18%;
+  grid-template-columns: 20% 20% 20%;
+  gap: 1em;
+  justify-content: center;
+  margin-left: 10em;
 }
 
 .img {
@@ -154,17 +154,17 @@ html {
     -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
 .projectText {
-  padding-top: 2em;
+  padding-top: 0.5em;
   text-align: center;
   color: black;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 }
 
 .projectFrame {
   display: grid;
   grid-template-columns: 30% 30% 30%;
   gap: 2em;
-  margin-left: 2em;
+  justify-content: center;
 }
 
 .projectDiv {
@@ -267,14 +267,20 @@ html {
   margin-bottom: 1em;
   text-align: center;
 }
-@media screen and (max-width: 720px) {
-  .HeaderText {
+
+@media screen and (max-width: 880px) {
+  .imageDiv {
+    margin-left: 3em;
   }
+}
+@media screen and (max-width: 720px) {
   .imageDiv {
     display: grid;
     grid-template-columns: 40% 40%;
     gap: 3em;
+    margin-right: 3em;
   }
+
   .projectFrame {
     display: inline;
     margin-bottom: 1em;
@@ -293,14 +299,19 @@ html {
   }
   #contactHeader {
     font-size: 45px;
-    padding-top: 1.4em;
+    padding-top: 1em;
   }
+  .contactFrame {
+    margin-top: 1em;
+  }
+
   .logo {
     margin-left: 20px;
   }
 
   .footerText {
     text-align: center;
+    /* padding-top: 10em; */
   }
   .HeaderText {
     font-size: 17px;
@@ -310,4 +321,8 @@ html {
   .downloadResume {
     margin-left: 35%;
   }
+  #recentWorkHeader {
+    font-size: 1.7em;
+  }
 }
+/*  */
